api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    exposed_http: "true"
    exposed_https: "true"
  name: api
