api/k8s/deployment-packager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packager
  namespace: api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 4
  selector:
    matchLabels:
      app: "packager"
  template:
    metadata:
      labels:
        app: packager
        tier: automation
        version: "1.0"
        release: production
    spec:
      nodeSelector:
        cloud.google.com/compute-class: "Scale-Out"
      terminationGracePeriodSeconds: 10
      serviceAccountName: api
      containers:
        - name: packager
          image: us-central1-docker.pkg.dev/controlnet-407314/gke-us-central1-images/mythica-packager:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: ephemeral-packaged-content
              mountPath: /tmp
              readOnly: false
      volumes:
        - name: ephemeral-packaged-content
          emptyDir: { }
      restartPolicy: Always
