api/k8s/deployment-web-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-front
  namespace: api
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 10
  selector:
    matchLabels:
      app: web-front
  template:
    metadata:
      labels:
        app: web-front
        tier: web
        version: "1.0"
        release: production
    spec:
      nodeSelector:
        cloud.google.com/compute-class: "Scale-Out"
      securityContext:
        fsGroup: 101 # use the nginx group for file-system security privileges
      terminationGracePeriodSeconds: 60
      serviceAccountName: api
      containers:
        - name: nginx
          image: us-central1-docker.pkg.dev/controlnet-407314/gke-us-central1-images/mythica-web-front:74f6da56
          args: [ "nginx", "-c", "/etc/nginx/nginx-gke.conf" ]
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 1
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: ephemeral-sites-volume
              mountPath: /sites
            - name: letsencrypt-tls
              mountPath: "/etc/nginx/tls"
              readOnly: true
      volumes:
        - name: ephemeral-sites-volume
          emptyDir: { }
        - name: letsencrypt-tls
          secret:
            secretName: letsencrypt-tls
            defaultMode: 0640
      restartPolicy: Always
