api/k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: api
  labels:
    app: app
    tier: web
    version: "1.0"
    release: production
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http-api
  selector:
    app: app
