api/k8s/service-gcs-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcs-proxy
  namespace: api
  labels:
    app: gcs-proxy
    tier: web
    version: "1.0"
    release: production
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http-proxy
  selector:
    app: gcs-proxy
