api/k8s/service-web-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-front
  namespace: api
  labels:
    app: web-front
    tier: web
    version: "1.0"
    release: production
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app: web-front
