api/k8s/httproute-gcs-proxy.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: images
  namespace: api
  labels:
    exposed: "true"
spec:
  parentRefs:
    - kind: Gateway
      namespace: ingress
      name: external-gateway
  hostnames:
    - "images.mythica.ai"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mythica-public-images/
      backendRefs:
        - name: gcs-proxy
          port: 80
