api/k8s/httproute-web-front.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api
  namespace: api
  labels:
    exposed: "true"
spec:
  parentRefs:
  - kind: Gateway
    namespace: ingress
    name: external-gateway
  hostnames:
  - "api.mythica.ai"
  - "images.mythica.ai"
  - "cache.mythica.ai"
  - "pcgindex.mythica.ai"
  - "files.mythica.ai"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: web-front
      port: 80
